--- a/src/components/PageFrame.astro
+++ b/src/components/PageFrame.astro
@@ -8,7 +8,7 @@
     .page {
         min-height: 100vh;
         background: #fffdfa;
-        color: #1c1c1c;
+        color: #2a2a2a;
         font-family: "Yu Mincho", "Hiragino Mincho ProN", "YuMincho",
             "Hiragino Mincho Pro", "Noto Serif JP", "Times New Roman", serif;
     }
