--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -25,6 +25,10 @@ const { items = [] } = Astro.props;
         margin: 0;
     }
 
+    .breadcrumbs {
+        margin-bottom: 2px;
+    }
+
     .breadcrumbs li {
         display: inline-flex;
         align-items: center;
